--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header>
     <div class="header-item1">
       <a href="index.html">
-        <img src="http://placehold.it/150x100" width="150" height="150" alt="img">
+        <img src="img/logo.svg" width="150" height="150" alt="img">
       </a>
     </div>
     <nav class="menu">
@@ -130,94 +130,87 @@
       <h3 class="hiddent-title">Каталог магазина</h3>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/catalog-ice-cream-1.jpg" width="150" height="150" alt="Мороженное сливочное с апельсиновым джемом и цитрусовой стружкой.">
           <span>310</span>
           <span>/кг</span>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-кофейное с кусочками шоколада">
+          <img src="img/catalog-ice-cream-2.jpg" width="150" height="150" alt="Мороженное сливочно-кофейное с кусочками шоколада.">
           <span>380</span>
           <span>/кг</span>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li>
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/catalog-ice-cream-3.jpg" width="150" height="150" alt="Мороженное сливочно-клубничное с присыпкой из белого шоколада.">
           <span>355</span>
           <span>/кг</span>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li>
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/catalog-ice-cream-4.jpg" width="150" height="150" alt="Мороженное сливочно-клубничное с присыпкой из белого шоколада.">
           <span>355</span>
           <span>/кг</span>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li>
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное крем-брюле с карамельной подливкой">
+          <img src="img/catalog-ice-cream-5.jpg" width="150" height="150" alt="Мороженное сливочное крем-брюле с карамельной подливкой.">
           <span>415</span>
           <span>/кг</span>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с брусничным джемом">
+          <img src="img/catalog-ice-cream-6.jpg" width="150" height="150" alt="Мороженное сливочное с брусничным джемом.">
           <span>325</span>
           <span>/кг</span>
           <h3>Сливочное с брусничным джемом</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-черничное с цельными ягодами черники">
+          <img src="img/catalog-ice-cream-7.jpg" width="150" height="150" alt="Мороженное сливочно-черничное с цельными ягодами черники.">
           <span>410</span>
           <span>/кг</span>
           <h3>Сливочное с брусничным джемом</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-лимонное с карамельной присыпкой">
+          <img src="img/catalog-ice-cream-8.jpg" width="150" height="150" alt="Мороженное сливочно-лимонное с карамельной присыпкой.">
           <span>375</span>
           <span>/кг</span>
           <h3>Сливочно-лимонное с карамельной присыпкой</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с шоколадной стружкой">
+          <img src="img/catalog-ice-cream-9.jpg" width="150" height="150" alt="Мороженное сливочное с шоколадной стружкой.">
           <span>320</span>
           <span>/кг</span>
           <h3>Сливочное с шоколадной стружкой</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-ванильное с кусочками шоколада">
+          <img src="img/catalog-ice-cream-10.jpg" width="150" height="150" alt="Мороженное сливочно-ванильное с кусочками шоколада.">
           <span>440</span>
           <span>/кг</span>
           <h3>Сливочно-ванильное с кусочками шоколада</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150"  alt="Сливочное с ментоловым сиропом">
+          <img src="img/catalog-ice-cream-11.jpg" width="150" height="150"  alt="Мороженное сливочное с ментоловым сиропом.">
           <span>435</span>
           <span>/кг</span>
           <h3>Сливочное с ментоловым сиропом</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
-          <img src="http://placehold.it/150x100"  width="150" height="150" alt="Сливочное с кусочками черного шоколада">
+          <img src="img/catalog-ice-cream-12.jpg"  width="150" height="150" alt="Мороженное сливочное с кусочками черного шоколада.">
           <span>355</span>
           <span>/кг</span>
           <h3>Сливочное с кусочками черного шоколада</h3>
-          <a href="#" class="item-button-hover">Быстрый просмотр</a>
-        </li>
-        <li class="catalog-item">
-          <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с мятным сиропом">
-          <span>420</span>
-          <span>/кг</span>
-          <h3>Сливочное с мятным сиропом</h3>
           <a href="#" class="item-button-hover">Быстрый просмотр</a>
         </li>
       </ul>
