--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             <a href="#">Пусто</a>
           </span>
         </div>
-        <span class="time-work">
+        <p class="time-work">
           <b>С 10 до 20, ежедневно</b>
           <a href="tel:88124502525">8 812 450-25-25</a>
-        </span>
+        </p>
       </div>
     </header>
 
@@ -130,11 +130,11 @@
         <section class="control-block">
           <h3 class="visually-hidden">Панель управления</h3>
           <span class="radio-switch">
-            <input type="radio" id="switch1" name="switch" checked>
+            <input class="visually-hidden" type="radio" id="switch1" name="switch" checked>
             <label for="switch1" class="switch-modify"></label>
-            <input type="radio" id="switch2" name="switch">
+            <input class="visually-hidden" type="radio" id="switch2" name="switch">
             <label for="switch2" class="switch-modify"></label>
-            <input type="radio" id="switch3" name="switch">
+            <input class="visually-hidden" type="radio" id="switch3" name="switch">
             <label for="switch3" class="switch-modify"></label>
           </span>
           <span class="control-button">
@@ -188,6 +188,8 @@
                   <img src="img/hits-ice-cream-2.jpg" width="150" height="150" alt="Мороженное. Сливочно-кофейное с кусочками шоколада.">
                   <span class="catalog-price">
                     <b class="price-val">380</b>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="31" height="36" viewBox="0 0 31 36">
+                      <path fill="#FFF" d="M11 21h7.451c5.247 0 9.5-4.253 9.5-9.5S23.698 2 18.451 2H6v14H2v5h4v3H2v5h4v4h5v-4h15v-5H11v-3zm0-14h7.451v-.03a4.53 4.53 0 0 1 0 9.06V16H11V7z"/></svg>
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
