--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,9 @@
         </a>
       </div>
       <nav class="menu">
+
+        <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
+
         <ul class="menu-list">
           <li class="menu-item item-active">
             <a href="#">
@@ -157,7 +160,9 @@
   </header>
   <main>
     <section class="breadcrumbs-block">
+
       <h3 class="visually-hidden">Хлебные крошки</h3>
+
       <ul class="breadcrumbs-list">
         <li class="breadcrumbs-list">
           <a href="index.html">Главная</a>
@@ -172,7 +177,9 @@
     </section>
 
     <section class="filters-block">
+
       <h3 class="visually-hidden">Фильтр</h3>
+
       <form action="https://echo.htmlacademy.ru/" id="filter-form" method="GET">
         <fieldset class="filter-sort">
           <legend>Сортировка:</legend>
@@ -218,7 +225,9 @@
     </section>
 
     <section class="catalog-block">
-      <h3 class="hiddent-title">Каталог магазина</h3>
+
+      <h3 class="visually-hidden">Каталог магазина</h3>
+
       <ul class="catalog-list">
         <li class="catalog-item">
           <div class="catalog-item-inner">
@@ -246,8 +255,8 @@
             </div>
             <a href="#">
               <span>Сливочно-кофейное с кусочками шоколада</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li>
@@ -261,8 +270,8 @@
             </div>
             <a href="#">
               <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li>
@@ -276,8 +285,8 @@
             </div>
             <a href="#">
               <span>Сливочное крем-брюле с карамельной подливкой</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li>
@@ -291,8 +300,8 @@
             </div>
             <a href="#">
               <span>Сливочное с брусничным джемом</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -306,8 +315,8 @@
             </div>
             <a href="#">
               <span>Сливочно-черничное с цельными ягодами черники</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -321,8 +330,8 @@
             </div>
             <a href="#">
               <span>Сливочно-лимонное с карамельной присыпкой</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -336,8 +345,8 @@
             </div>
             <a href="#">
               <span>Сливочное с шоколадной стружкой</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -351,8 +360,8 @@
             </div>
             <a href="#">
               <span>Сливочно-ванильное с кусочками шоколада</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -366,8 +375,8 @@
             </div>
             <a href="#">
               <span>Сливочное с ментоловым сиропом</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -381,8 +390,8 @@
             </div>
             <a href="#">
               <span>Сливочное с кусочками черного шоколада</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -396,8 +405,8 @@
             </div>
             <a href="#">
               <span>Сливочное с мятным сиропом</span>
+              <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
             </a>
-            <button type="button" class="catalog-button">Быстрый просмотр</button>
           </div>
         </li>
       </ul>
