--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           </a>
         </div>
         <nav class="menu">
+          <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
           <ul class="menu-list">
             <li class="menu-item item-active">
               <a href="#">
@@ -145,22 +146,22 @@
         <section class="banner-block">
           <h3 class="visually-hidden">Рекламный блок</h3>
           <div class="banner-item">
-            <h2>Малинка даром!</h2>
-            <p>
+            <h2 class="banner-heading">Малинка даром!</h2>
+            <p class="banner-content">
               При покупке 2 кг любого фруктового мороженого,
               добавим в ваш заказ добавим банку
               малинового варенья бесплатно
             </p>
-            <a href="#">Хочу варенье!</a>
+            <a class="banner-link" href="#">Хочу варенье!</a>
           </div>
           <div class="banner-item">
-            <h2>Шоколадки даром!</h2>
-            <p>
+            <h2 class="banner-heading">Шоколадки даром!</h2>
+            <p class="banner-content">
               При покупке 2 кг пломбира, добавим в ваш
               заказ упаковку вкуснейшей шоколадной
               присыпки совершенно бесплатно.
             </p>
-            <a href="#">Хочу шоколадки!</a>
+            <a class="banner-link" href="#">Хочу шоколадки!</a>
           </div>
         </section>
 
@@ -178,8 +179,8 @@
                 </div>
                 <a href="#">
                   <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+                  <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
                 </a>
-                <button type="button" class="catalog-button">Быстрый просмотр</button>
               </div>
             </li>
             <li>
@@ -188,15 +189,13 @@
                   <img src="img/hits-ice-cream-2.jpg" width="150" height="150" alt="Мороженное. Сливочно-кофейное с кусочками шоколада.">
                   <span class="catalog-price">
                     <b class="price-val">380</b>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="31" height="36" viewBox="0 0 31 36">
-                      <path fill="#FFF" d="M11 21h7.451c5.247 0 9.5-4.253 9.5-9.5S23.698 2 18.451 2H6v14H2v5h4v3H2v5h4v4h5v-4h15v-5H11v-3zm0-14h7.451v-.03a4.53 4.53 0 0 1 0 9.06V16H11V7z"/></svg>
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
                 <a href="#">
                   <span>Сливочно-кофейное с кусочками шоколада</span>
+                  <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
                 </a>
-                <button type="button" class="catalog-button">Быстрый просмотр</button>
               </div>
             </li>
             <li>
@@ -210,8 +209,8 @@
                 </div>
                 <a href="#">
                   <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
+                  <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
                 </a>
-                <button type="button" class="catalog-button">Быстрый просмотр</button>
               </div>
             </li>
             <li>
@@ -225,8 +224,8 @@
                 </div>
                 <a href="#">
                   <span>Сливочное крем-брюле с карамельной подливкой</span>
+                  <span class="catalog-invisble-button" href="">Быстрый просмотр</span>
                 </a>
-                <button type="button" class="catalog-button">Быстрый просмотр</button>
               </div>
             </li>
           </ul>
@@ -237,25 +236,25 @@
           <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
           <ul class="seo-list">
             <li class="seo-item">
-              <p>
+              <p class="seo-content">
                 Все наше мороженное изготавливается на собственном производстве,
                 с использованием современного оборудования и проверенных временем технологий.
               </p>
             </li>
             <li class="seo-item">
-              <p>
+              <p class="seo-content">
                 Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний,
                 с которыми нас связывает долговременное сотрудничество.
               </p>
             </li>
             <li class="seo-item">
-              <p>
+              <p class="seo-content">
                 Для приготовления мороеженного используются настоящие сливки и молоко высочайшего качества.
                 Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
               </p>
             </li>
             <li class="seo-item">
-              <p>
+              <p class="seo-content">
                 Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке,
                 который не дает мороженному растаять в пути и позволяет сохранить превосходный вкус.
               </p>
@@ -271,7 +270,7 @@
             <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
           <div class="news-item">
-            <p>
+            <p class="news-content">
               Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
               что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
             </p>
@@ -287,11 +286,11 @@
       <h3 class="visually-hidden">Наше местонахождение</h3>
       <div class="address-maps"></div>
       <div class="address-item">
-        <p>
+        <p class="address-content">
           Адрес главноего офиса и офлайн магазина:
           <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
         </p>
-        <p>
+        <p class="address-content">
           Для заказов по телефону:
           <b>8 812 450-25-25</b>
           (c 10 до 20 ежедневно)
@@ -341,11 +340,11 @@
     </footer>
     <section id="callback" class="popup-callback">
       <h3 class="visually-hidden">Форма обратной связи</h3>
-      <span>Мы обязательно вам ответим!</span>
+      <p class="callback-content">Мы обязательно вам ответим!</p>
       <form action="https://echo.htmlacademy.ru/" id="callback-form" method="GET">
       <p class="callback-name">
         <input type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?">
-        <label for="callback-text-name" class="visually-hidden">Как вас зовут ?</label>
+        <label for="callback-text-name" class="visually-hidden">Как вас зовут?</label>
       </p>
       <p class="callback-mail">
         <input type="text" id="callback-text-mail" name="callback-form" placeholder="Ваша почта?">
