Добавил Aria-Label для ссылки на форму входа

--- a/catalog.html
+++ b/catalog.html
@@ -73,9 +73,7 @@
       </div>
       <ul class="user-profile">
         <li class="profile-signin">
-          <a href="#">
-            <span class="visually-hidden">Вход</span>
-          </a>
+          <a href="#" aria-label="Вход в личный кабинет">Вход</a>
         </li>
         <li class="signin-popup">
           <div class="signin-popup-inner">
