Добавил Aria-Label для ссылки на форму входа

--- a/index.html
+++ b/index.html
@@ -71,20 +71,18 @@
         </div>
         <ul class="user-profile">
           <li class="profile-signin">
-            <a href="#">
-              <span class="visually-hidden">Вход</span>
-            </a>
+            <a href="#" aria-label="Вход в личный кабинет">Вход</a>
           </li>
           <li class="signin-popup">
             <div class="signin-popup-inner">
               <form action="https://echo.htmlacademy.ru/" id="signin-form" method="POST">
                 <p class="signin-form-email">
                   <input type="text" name="signin-form" id="signin-email" placeholder="Электронная почта">
-                  <label for="signin-email" class="visually-hidden">Электронная почта</label>
+                  <label for="signin-email" class="visually-hidden">Введите адрес электронной почты</label>
                 </p>
                 <p class="signin-form-password">
                   <input type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль">
-                  <label for="signin-password">Пароль</label>
+                  <label for="signin-password">Введите пароль</label>
                 </p>
                 <p class="signin-form-submit">
                   <button type="submit" name="button" form="signin-form">Войти</button>
