Уточнение в Label в форме входа

--- a/catalog.html
+++ b/catalog.html
@@ -80,11 +80,11 @@
             <form action="https://echo.htmlacademy.ru/" id="signin-form" method="POST">
               <p class="signin-form-email">
                 <input type="text" name="signin-form" id="signin-email" placeholder="Электронная почта">
-                <label for="signin-email" class="visually-hidden">Электронная почта</label>
+                <label for="signin-email" class="visually-hidden">Введите адрес электронной почты</label>
               </p>
               <p class="signin-form-password">
                 <input type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль">
-                <label for="signin-password">Пароль</label>
+                <label for="signin-password">Введите пароль</label>
               </p>
               <p class="signin-form-submit">
                 <button type="submit" name="button" form="signin-form">Войти</button>
