Добавил активное меню.

--- a/catalog.html
+++ b/catalog.html
@@ -31,12 +31,12 @@
                   <span class="popup-menu-value">Новинки</span>
                 </a>
               </li>
-              <li class="popup-menu-item">
+              <li class="popup-menu-item active-item">
                 <a href="#">
                   <span class="popup-menu-value">Сливочное</span>
                 </a>
               </li>
-              <li class="popup-menu-item item-active">
+              <li class="popup-menu-item">
                 <a href="#">
                   <span class="popup-menu-value">Щербеты</span>
                 </a>
